{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 1429,
  "lineage": "501b4550-92ce-dcb4-f604-4c511242c7b0",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_backend_service",
      "name": "default-backend-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "affinity_cookie_ttl_sec": 0,
            "backend": [
              {
                "balancing_mode": "UTILIZATION",
                "capacity_scaler": 1,
                "group": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/zones/us-central1-a/instanceGroups/my-instance-group-manager",
                "max_connections": 0,
                "max_connections_per_endpoint": 0,
                "max_connections_per_instance": 0,
                "max_rate": 0,
                "max_rate_per_endpoint": 0,
                "max_rate_per_instance": 0,
                "max_utilization": 0
              }
            ],
            "cdn_policy": [
              {
                "cache_mode": "CACHE_ALL_STATIC",
                "client_ttl": 3600,
                "default_ttl": 3600,
                "max_ttl": 86400,
                "negative_caching": true,
                "serve_while_stale": 86400,
                "signed_url_cache_max_age_sec": 0
              }
            ],
            "connection_draining_timeout_sec": 300,
            "creation_timestamp": "2023-09-06T22:04:35.532-07:00",
            "enable_cdn": true,
            "fingerprint": "_BLdiN4fETs=",
            "generated_id": 720410265141962508,
            "health_checks": [
              "projects/practicegcp-396109/global/healthChecks/example-health-check"
            ],
            "id": "projects/practicegcp-396109/global/backendServices/default-backend-service",
            "load_balancing_scheme": "EXTERNAL",
            "name": "default-backend-service",
            "port_name": "http",
            "project": "practicegcp-396109",
            "protocol": "HTTP",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/backendServices/default-backend-service",
            "session_affinity": "NONE",
            "timeout_sec": 10
          },
          "dependencies": [
            "google_compute_health_check.example_health_check",
            "google_compute_instance_group_manager.my_instance_group_manager",
            "google_compute_instance_template.php-template",
            "google_compute_network.demo_network",
            "google_compute_subnetwork.demo_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-06T22:03:39.207-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/practicegcp-396109/global/firewalls/allow-http",
            "log_config": [],
            "name": "allow-http",
            "network": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/networks/my-network-1",
            "priority": 1000,
            "project": "practicegcp-396109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/firewalls/allow-http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "3306"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-06T22:03:39.198-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/practicegcp-396109/global/firewalls/allow-mysql",
            "log_config": [],
            "name": "allow-mysql",
            "network": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/networks/my-network-1",
            "priority": 1000,
            "project": "practicegcp-396109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/firewalls/allow-mysql",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow-ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-09-06T22:03:38.690-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/practicegcp-396109/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/networks/my-network-1",
            "priority": 1000,
            "project": "practicegcp-396109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.demo_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_address",
      "name": "default-static-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.149.103.146",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-09-06T22:02:44.396-07:00",
            "id": "projects/practicegcp-396109/global/addresses/default-static-ip",
            "name": "default-static-ip",
            "prefix_length": 0,
            "project": "practicegcp-396109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/addresses/default-static-ip"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_global_forwarding_rule",
      "name": "default-forwarding-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "projects/practicegcp-396109/global/forwardingRules/default-forwarding-rule",
            "ip_address": "projects/practicegcp-396109/global/addresses/default-static-ip",
            "ip_protocol": "TCP",
            "label_fingerprint": "42WmSpB8rSM=",
            "load_balancing_scheme": "EXTERNAL",
            "name": "default-forwarding-rule",
            "port_range": "80",
            "project": "practicegcp-396109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/forwardingRules/default-forwarding-rule",
            "target": "projects/practicegcp-396109/global/targetHttpProxies/default-target-http-proxy"
          },
          "dependencies": [
            "google_compute_backend_service.default-backend-service",
            "google_compute_global_address.default-static-ip",
            "google_compute_health_check.example_health_check",
            "google_compute_instance_group_manager.my_instance_group_manager",
            "google_compute_instance_template.php-template",
            "google_compute_network.demo_network",
            "google_compute_subnetwork.demo_subnet",
            "google_compute_target_http_proxy.default-target-http-proxy",
            "google_compute_url_map.default-url-map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "demo_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/practicegcp-396109/global/networks/my-network-1",
            "mtu": 0,
            "name": "my-network-1",
            "project": "practicegcp-396109",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/networks/my-network-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "demo_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-06T22:03:39.815-07:00",
            "gateway_address": "10.0.1.1",
            "id": "projects/practicegcp-396109/regions/us-central1/subnetworks/my-subnet-1",
            "ip_cidr_range": "10.0.1.0/24",
            "name": "my-subnet-1",
            "network": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/networks/my-network-1",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "practicegcp-396109",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/regions/us-central1/subnetworks/my-subnet-1",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.demo_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_target_http_proxy",
      "name": "default-target-http-proxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-06T22:05:21.127-07:00",
            "id": "projects/practicegcp-396109/global/targetHttpProxies/default-target-http-proxy",
            "name": "default-target-http-proxy",
            "project": "practicegcp-396109",
            "proxy_bind": false,
            "proxy_id": 1663936093840794878,
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/targetHttpProxies/default-target-http-proxy",
            "url_map": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/urlMaps/default-url-map"
          },
          "dependencies": [
            "google_compute_backend_service.default-backend-service",
            "google_compute_health_check.example_health_check",
            "google_compute_instance_group_manager.my_instance_group_manager",
            "google_compute_instance_template.php-template",
            "google_compute_network.demo_network",
            "google_compute_subnetwork.demo_subnet",
            "google_compute_url_map.default-url-map"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_url_map",
      "name": "default-url-map",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-09-06T22:05:08.757-07:00",
            "default_route_action": [],
            "default_service": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/backendServices/default-backend-service",
            "default_url_redirect": [],
            "description": "",
            "fingerprint": "nI4EWiC5jl8=",
            "header_action": [],
            "host_rule": [],
            "id": "projects/practicegcp-396109/global/urlMaps/default-url-map",
            "map_id": 8910276199777101035,
            "name": "default-url-map",
            "path_matcher": [],
            "project": "practicegcp-396109",
            "self_link": "https://www.googleapis.com/compute/v1/projects/practicegcp-396109/global/urlMaps/default-url-map",
            "test": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_backend_service.default-backend-service",
            "google_compute_health_check.example_health_check",
            "google_compute_instance_group_manager.my_instance_group_manager",
            "google_compute_instance_template.php-template",
            "google_compute_network.demo_network",
            "google_compute_subnetwork.demo_subnet"
          ]
        }
      ]
    }
  ]
}